test/src/e2e_vm_tests/test_programs/should_fail/attributes_cfg_mismatching_program_type/src/main.sw
script;

#[cfg(program_type = "predicate")]
fn foo() {
  ()
}

fn main() {
  foo()
}
